--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 
- 
+ <mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <span>Bitfumes</span>
+        <button mat-button>Theme</button>
+ </mat-toolbar-row>
+ </mat-toolbar>
+ <br>
 <app-form></app-form>
+<br>
+
+<app-f-group></app-f-group>
+<br>
 <router-outlet></router-outlet>
