--- a/src/app/f-group/f-group.component.html
+++ b/src/app/f-group/f-group.component.html
@@ -1,3 +1,31 @@
-<p>
-  f-group works!
-</p>
+<div class="container">
+  <h2>user Data</h2>
+  <form [FormGroup]="userForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label>Name</label>
+      <input type="text" class="form-control" form-controlName="Name">
+    </div>
+    <div class="form-group">
+      <label>Email</label>
+      <input type="text" class="form-control" form-controlName="Email">
+    </div>
+    
+    <div FormGroupName="address">
+      <div class="form-group">
+        <label>Street</label>
+        <input type="text" class="form-control" form-controlName="Street">
+      </div>
+      <div class="form-group">
+        <label>City</label>
+        <input type="text" class="form-control" form-controlName="City">
+      </div>
+      <div class="form-group">
+        <label>PostaleCode</label>
+        <input type="text" class="form-control" form-controlName="PostaleCode">
+      </div>
+    </div>
+
+
+  </form>
+
+</div>
