--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
  <mat-toolbar color="primary">
     <mat-toolbar-row>
         <span>Bitfumes</span>
-        <button mat-button router link="/pokemon">Theme</button>
+        <button mat-button (click)="onpok()">Theme</button></a>
  </mat-toolbar-row>
  </mat-toolbar>
  <br>
