--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -9,8 +9,8 @@
         <div class="card-stacked">
           <div class="card-content">
             <p>{{ pokemon.name }}</p>
-            <p><small>{{ pokemon.created | date:"dd/MM/yyyy" }}</small></p>
-            <span *ngFor='let type of pokemon.types' class="{{ type | pokemonTypeColor }}">{{ type }}</span>
+            <p><small>{{ pokemon.created }}</small></p>
+           
           </div>
         </div>
       </div>
